# pqwave

./: .gitignore  CHANGELOG.md  DEVELOPMENT_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  expr.md  issues.md  log.md  ngspice_precedence.md  pqwave.py  pyproject.toml  requirements.txt  setup.py  test_mouse_coords.py  test_xschem_integration.py
docs/: back-annotation.md  back_annotation_plan.md  cli-api-prd.md  example_simrc  mixed_signal_gap.md  mixed_signal_prd.md  xschem_integration.md  xschem_override_install.md
docs/kicad/: guide.html  guide.md  lessons-learned.md
docs/lepton/: guide.html
docs/monte_carlo/: guide.html  guide.md
docs/qucs/: guide.html
pqwave/: __init__.py  logging_config.py  main.py  test_runner.py
pqwave/analysis/: __init__.py  bode.py  correlation.py  histogram.py  multi_run.py  nyquist.py  power_analyzer.py
pqwave/bridge/: __init__.py  netlist_postprocessor.py  schem_bridge.py
pqwave/communication/: __init__.py  back_annotate.tcl  command_handler.py  window_registry.py  xschem_override.tcl  xschem_server.py
pqwave/digital/: __init__.py  bus_slicing.py  bus_trace.py  digital_renderer.py  digital_step_item.py  eye_renderer.py  threshold_config.py  threshold_dialog.py  trace_type_manager.py  vcd_time_aligner.py
pqwave/llm/: backends.py  setup.py  templates.py  templates.yaml  translator.py
pqwave/measure/: measure_engine.py  measure_script_parser.py
pqwave/models/: __init__.py  (+10 more)
share/: pqwave-server.tcl
tests/: test_imports.py  test_models.py  test_mouse_coords.py  test_rawfile.py  test_trace_manager.py
(+241 files in other folders)
