[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqwave"
version = "0.2.1.2"
authors = [
    {name = "niuniuaba", email = "liuyongjin@petalmail.com"}
]
description = "A Wave Viewer for SPICE raw data using spicelib and PyQtGraph"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6>=6.5.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.21.0",
    "spicelib>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/niuniuaba/pqwave"
Repository = "https://github.com/niuniuaba/pqwave.git"
Issues = "https://github.com/niuniuaba/pqwave/issues"

[project.scripts]
pqwave = "pqwave:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pqwave*"]
exclude = ["tests*", "archieves*"]
